infrastructure.yml
AWSTemplateFormatVersion: 2010-09-09
Description: EC2 Instance for Jitsi

Parameters:  
  EC2KeyName:
    Type: String
    Default: jitsi-keyname
    Description: The SSH key for accessing the instance
  EC2Instance:
    Type: String
    Default: t2.micro
    Description: The type of EC2 instance
  JitsiDomain:
    Type: String
    Description: (Optional) Domain name for the EC2 instance
    Default: AWS::NoValue
  Route53HostedZoneID:
    Type: String
    Default: AWS::NoValue
    Description: (Optional) If above domain is managed by AWS Route53, a Route53 record set will be created for the EC2's Public IP
  LetsEncryptEmail:
    Type: String
    Default: AWS::NoValue
    Description: (Optional) If Domain is given, a let's encrypt certificate will be generated with this email as owner

Conditions:
  CreateRecordSet: !Not [!Equals [ !Ref Route53HostedZoneID, "" ]]

Resources:
  JitsiSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:     
      GroupName: jitsi
      GroupDescription: shh access for ec2      
      SecurityGroupIngress:         
        - FromPort: 22
          IpProtocol: tcp          
          CidrIp: 0.0.0.0/0
          ToPort: 22
        - FromPort: 80
          IpProtocol: tcp          
          CidrIp: 0.0.0.0/0
          ToPort: 80
        - FromPort: 443
          IpProtocol: tcp          
          CidrIp: 0.0.0.0/0
          ToPort: 443
        - FromPort: 10000
          IpProtocol: udp          
          CidrIp: 0.0.0.0/0
          ToPort: 10000

  EC2Worker:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0b418580298265d5c  #ubuntu 18.04 LTS
      InstanceType: !Ref EC2Instance
      KeyName: !Ref EC2KeyName      
      SecurityGroupIds:
        - !Ref JitsiSecurityGroup 
      Tags:
      - Key: Name
        Value: Jitsi
      UserData: 
        Fn::Base64: !Sub |          
          #!/bin/bash          

          ## https://github.com/jitsi/jitsi-meet/blob/master/doc/quick-install.md
          
          HOSTNAME=${JitsiDomain}
          if [ -z $HOSTNAME ]; then HOSTNAME=$(curl -s http://169.254.169.254/latest/meta-data/public-hostname); fi                    
          
          echo "Setting hostame $HOSTNAME" >> /home/ubuntu/progress.log
          sudo hostnamectl set-hostname $HOSTNAME
          sudo sed -i " 1 s/.*/& $HOSTNAME/" /etc/hosts

          echo 'deb https://download.jitsi.org stable/' | sudo tee /etc/apt/sources.list.d/jitsi-stable.list
          wget -qO -  https://download.jitsi.org/jitsi-key.gpg.key | sudo apt-key add -

          sudo apt-get update
          sudo apt-get -y install nginx apt-transport-https debconf-utils

          echo "Installing jitsi-meet" >> /home/ubuntu/progress.log
          ## pre-seed options & install jitsi-meet
          echo "jitsi-videobridge2 jitsi-videobridge/jvb-hostname string $HOSTNAME" | sudo debconf-set-selections
          echo "jitsi-meet-web-config jitsi-meet/cert-choice select 'Generate a new self-signed certificate (You will later get a chance to obtain a Let's encrypt certificate)'" | sudo debconf-set-selections         
          sudo apt-get --option=Dpkg::Options::=--force-confold --option=Dpkg::options::=--force-unsafe-io --assume-yes --quiet install jitsi-meet
          
          echo "Patching /etc/nginx/sites-available/$HOSTNAME.conf" >> /home/ubuntu/progress.log
          ## patch nginx
          sudo sed -i " 1 s/server_names_hash_bucket_size 64/server_names_hash_bucket_size 128/" /etc/nginx/sites-available/$HOSTNAME.conf
          while true; do fail=$(sudo service nginx status  | tail -1 | grep -i fail | wc -l); if [ $fail -ne 0 ]; then  sudo service nginx reload; sleep 3; else break; fi; done

          ## FIXME: very, very ugly: find a better way..
          ## create letsencrypt certificate
          OWNER_EMAIL=${LetsEncryptEmail}                    
          if [ -n $JitsiDomain ] && [ -n $OWNER_EMAIL ]
            then
              echo "Creating certificate for $OWNER_EMAIL" >> /home/ubuntu/progress.log
              while true; do success=$(printf "$OWNER_EMAIL\n" | sudo /usr/share/jitsi-meet/scripts/install-letsencrypt-cert.sh | grep -i "Congratulations! Your certificate and chain have been saved at" | wc -l); if [ $success -eq 1 ]; then  break;  else  sleep 5; fi; done
          fi

          echo "Install completed" >> /home/ubuntu/progress.log
          


  JitsiRecordSet:    
    Type: AWS::Route53::RecordSet
    DependsOn: EC2Worker
    Condition: CreateRecordSet
    Properties:
      HostedZoneId: !Ref Route53HostedZoneID
      Name: !Ref JitsiDomain
      Type: A
      TTL: 60
      ResourceRecords:
      - !GetAtt EC2Worker.PublicIp
